--- a/ashka.html
+++ b/ashka.html
@@ -1,3 +1,6 @@
 <center>
   <hi>ASHKA</hi>
-</center>
+</center><p>
+  C:\Users\DELL\OneDrive\Desktop\rename.git\GITLEARNING2\ashka.html\ashka.html
+
+</p>
