--- a/ashka.html
+++ b/ashka.html
@@ -1,6 +1,8 @@
 <center>
   <hi>ASHKA</hi>
-</center><p>
-  C:\Users\DELL\OneDrive\Desktop\rename.git\GITLEARNING2\ashka.html\ashka.html
-
+</center>
+<hr>
+<p>
+  C:\Users\DELL\OneDrive\Desktop\rename.git\GITLEARNING2\ashka.html\ashka.htmlgtuhijklo8fffryuihihio6rf4rytuijoi96rryfybj
 </p>
+<p>heyyyyyyyy</p>
